Update meta description and content to reflect 26 years of service for Gracious Angeli Travel & Tours

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Gracious Angeli Travel & Tours - Your Trusted Travel Partner Since 1999</title>
     
     <!-- SEO Meta Tags -->
-    <meta name="description" content="Gracious Angeli Travel & Tours offers international and domestic travel packages, visa assistance, air ticketing, and study abroad programs. 25+ years of trusted travel services in Baguio City and Santiago City.">
+    <meta name="description" content="Gracious Angeli Travel & Tours offers international and domestic travel packages, visa assistance, air ticketing, and study abroad programs. 26 years of trusted travel services in Baguio City and Santiago City.">
     <meta name="keywords" content="travel agency, tour packages, visa assistance, air ticketing, study abroad, Baguio travel, Philippines travel, international tours, domestic tours">
     <meta name="author" content="Gracious Angeli Travel & Tours">
     <meta name="robots" content="index, follow">
@@ -78,7 +78,7 @@
         <section class="hero-bg text-white py-20">
             <div class="max-w-7xl mx-auto px-4 text-center">
                 <h2 class="text-5xl font-bold mb-6">Discover Your Next Adventure</h2>
-                <p class="text-xl mb-8">25+ years of creating unforgettable travel experiences</p>
+                <p class="text-xl mb-8">26 years of creating unforgettable travel experiences</p>
                 <button onclick="showTab('services')" class="bg-white text-blue-600 px-8 py-4 rounded-full text-lg font-semibold hover:bg-blue-50 transition-all shadow-lg hover:shadow-xl">
                     Explore Our Services
                 </button>
@@ -331,7 +331,7 @@
                         <div class="text-center">
                             <div class="text-3xl mb-2">🎯</div>
                             <h5 class="font-semibold text-gray-800">Success Guarantee</h5>
-                            <p class="text-sm text-gray-600">25+ years of proven results</p>
+                            <p class="text-sm text-gray-600">26 years of proven results</p>
                         </div>
                     </div>
                     
