Add GATT logo to navigation with clickable functionality

--- a/index.html
+++ b/index.html
@@ -36,8 +36,13 @@
         <div class="max-w-7xl mx-auto px-4">
             <div class="flex justify-between items-center py-4">
                 <div class="flex items-center">
-                    <h1 class="text-2xl font-bold text-white">Gracious Angeli</h1>
-                    <span class="text-blue-100 ml-2">Travel & Tours</span>
+                    <a href="#" onclick="showTab('home'); return false;" class="nav-logo flex items-center hover:opacity-80 transition-opacity duration-300 cursor-pointer">
+                        <img src="assets/gatt_logo_circle.jpg" alt="GATT Logo" class="w-12 h-12 rounded-full mr-3 border-2 border-white shadow-lg">
+                        <div>
+                            <h1 class="text-2xl font-bold text-white">Gracious Angeli</h1>
+                            <span class="text-blue-100 text-sm">Travel & Tours</span>
+                        </div>
+                    </a>
                 </div>
                 
                 <!-- Desktop Navigation -->
