--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <div class="flex justify-between items-center py-4">
                 <div class="flex items-center">
                     <a href="#" onclick="showTab('home'); return false;" class="nav-logo flex items-center hover:opacity-80 transition-opacity duration-300 cursor-pointer">
-                        <img src="assets/gatt_logo_circle.png" alt="GATT Logo" class="w-12 h-12 rounded-full mr-3 border-2 border-white shadow-lg">
+                        <img src="assets/gatt_logo_circle.png" alt="GATT Logo" class="w-12 h-12 mr-3 border-2 border-white shadow-lg">
                         <div>
                             <h1 class="text-2xl font-bold text-white">Gracious Angeli</h1>
                             <span class="text-blue-100 text-sm">Travel & Tours</span>
