--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <div class="flex justify-between items-center py-4">
                 <div class="flex items-center">
                     <a href="#" onclick="showTab('home'); return false;" class="nav-logo flex items-center hover:opacity-80 transition-opacity duration-300 cursor-pointer">
-                        <img src="assets/gatt_logo_circle.png" alt="GATT Logo" class="w-16 h-12 mr-3 border-2 border-white shadow-lg">
+                        <img src="assets/gatt_logo_circle.png" alt="GATT Logo" class="w-16 h-12 mr-3 shadow-lg">
                         <div>
                             <h1 class="text-2xl font-bold text-white">Gracious Angeli</h1>
                             <span class="text-blue-100 text-sm">Travel & Tours</span>
@@ -93,7 +93,7 @@
         <!-- Featured Destinations -->
         <section class="py-16 bg-white">
             <div class="max-w-7xl mx-auto px-4">
-                <h3 class="text-3xl font-bold text-center mb-12">Popular Destinations</h3>
+                <h3 class="text-3xl font-bold text-center mb-12 text-indigo-600">Popular Destinations</h3>
                 <div class="grid lg:grid-cols-3 gap-8">
                     <!-- Boracay Island Package -->
                     <div class="travel-card bg-white rounded-lg shadow-lg overflow-hidden border-2 border-blue-200">
@@ -355,7 +355,7 @@
         <!-- Customer Reviews -->
         <section class="py-16 section-gradient">
             <div class="max-w-7xl mx-auto px-4">
-                <h3 class="text-3xl font-bold text-center mb-12">What Our Customers Say</h3>
+                <h3 class="text-3xl font-bold text-center mb-12 text-indigo-600">What Our Customers Say</h3>
                 <div class="grid md:grid-cols-3 gap-8">
                     <div class="bg-white p-6 rounded-lg shadow-lg border-2 border-yellow-200 border-l-4 border-l-yellow-400">
                         <div class="flex items-center mb-4 pb-2 border-b-2 border-yellow-300">
