--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
         <!-- Hero Section -->
         <section class="hero-bg text-white py-20">
             <div class="max-w-7xl mx-auto px-4 text-center">
-                <h2 class="text-5xl font-bold mb-6">Discover Your Next Adventure</h2>
-                <p class="text-xl mb-8">26 years of creating unforgettable travel experiences</p>
+                <h2 class="text-5xl font-bold mb-6 text-indigo-800">Discover Your Next Adventure</h2>
+                <p class="text-xl mb-8 text-indigo-700">26 years of creating unforgettable travel experiences</p>
                 <button onclick="showTab('services')" class="bg-white text-blue-600 px-8 py-4 rounded-full text-lg font-semibold hover:bg-blue-50 transition-all shadow-lg hover:shadow-xl">
                     Explore Our Services
                 </button>
@@ -532,8 +532,8 @@
         <!-- Services Hero Section -->
         <section class="hero-bg text-white py-20">
             <div class="max-w-7xl mx-auto px-4 text-center">
-                <h2 class="text-5xl font-bold mb-6">Our Services</h2>
-                <p class="text-xl mb-8">Comprehensive travel solutions for all your needs</p>
+                <h2 class="text-5xl font-bold mb-6 text-indigo-800">Our Services</h2>
+                <p class="text-xl mb-8 text-indigo-700">Comprehensive travel solutions for all your needs</p>
             </div>
         </section>
 
