Update footer with tagline and DOT accreditation

--- a/index.html
+++ b/index.html
@@ -2743,7 +2743,8 @@
             <div class="grid md:grid-cols-4 gap-8">
                 <div>
                     <h3 class="text-xl font-bold mb-4">Gracious Angeli Travel & Tours</h3>
-                    <p class="text-gray-300">Your trusted travel partner since 1999</p>
+                    <p class="text-gray-300">Your trusted travel partner since 1999. We make your travel dreams come true with personalized service and exceptional experiences.</p>
+                    <p class="text-gray-300 font-semibold mt-2">DOT Accredited Travel Agency</p>
                 </div>
                 <div>
                     <h4 class="font-bold mb-4">Services</h4>
