Add CSS spacing fix for Philippines section with responsive design

--- a/index.html
+++ b/index.html
@@ -2638,7 +2638,7 @@
             </section>
             
             <!-- Call to Action -->
-            <div class="text-center bg-gradient-to-r from-blue-50 to-cyan-50 p-8 rounded-lg border-2 border-blue-200 mt-24">
+            <div class="text-center bg-gradient-to-r from-blue-50 to-cyan-50 p-8 rounded-lg border-2 border-blue-200 mt-24 philippines-section">
                     <div class="text-4xl mb-4">🇵🇭</div>
                     <h4 class="text-2xl font-bold text-blue-600 mb-4">Ready to Explore the Philippines?</h4>
                     <p class="text-gray-700 mb-6">From the world-famous beaches of Boracay to the underground rivers of Palawan, and the rich history of Cebu, the Philippines offers unforgettable experiences!</p>
