--- a/index.html
+++ b/index.html
@@ -564,8 +564,8 @@
                         <button onclick="handlePackageClick('philippines')" class="bg-gradient-to-r from-blue-600 to-cyan-600 text-white px-8 py-3 rounded-lg hover:from-blue-700 hover:to-cyan-700 font-semibold transition-all shadow-lg hover:shadow-xl">
                             📞 Get Your Philippines Quote Now
                         </button>
-                        <button onclick="handlePackageClick('domestic')" class="bg-gradient-to-r from-green-600 to-teal-600 text-white px-8 py-3 rounded-lg hover:from-green-700 hover:to-teal-700 font-semibold transition-all shadow-lg hover:shadow-xl">
-                            📋 View All Domestic Packages
+                        <button onclick="showTab('services')" class="bg-gradient-to-r from-green-600 to-teal-600 text-white px-8 py-3 rounded-lg hover:from-green-700 hover:to-teal-700 font-semibold transition-all shadow-lg hover:shadow-xl">
+                            📋 View All Packages
                         </button>
                     </div>
                 </div>
