Fix map functionality with individual branch location details and improved overlay display

--- a/index.html
+++ b/index.html
@@ -2719,15 +2719,15 @@
                     <!-- Quick Location Cards -->
                     <div class="p-6 bg-gray-50 border-t-2 border-indigo-300">
                         <div class="grid md:grid-cols-4 gap-4">
-                            <div class="bg-white p-4 rounded-lg shadow border-l-4 border-l-indigo-400 hover:shadow-lg transition-all cursor-pointer" onclick="showLocation('baguio')">
+                            <div class="bg-white p-4 rounded-lg shadow border-l-4 border-l-indigo-400 hover:shadow-lg transition-all cursor-pointer" onclick="showLocation('main-office')">
                                 <h5 class="font-bold text-indigo-600 border-b border-indigo-200 pb-1">Main Office</h5>
                                 <p class="text-sm text-gray-600 pt-1">Skyworld Commercial Center</p>
                             </div>
-                            <div class="bg-white p-4 rounded-lg shadow border-l-4 border-l-blue-400 hover:shadow-lg transition-all cursor-pointer" onclick="showLocation('baguio')">
+                            <div class="bg-white p-4 rounded-lg shadow border-l-4 border-l-blue-400 hover:shadow-lg transition-all cursor-pointer" onclick="showLocation('sm-city')">
                                 <h5 class="font-bold text-blue-600 border-b border-blue-200 pb-1">SM City Branch</h5>
                                 <p class="text-sm text-gray-600 pt-1">Upper Basement</p>
                             </div>
-                            <div class="bg-white p-4 rounded-lg shadow border-l-4 border-l-purple-400 hover:shadow-lg transition-all cursor-pointer" onclick="showLocation('baguio')">
+                            <div class="bg-white p-4 rounded-lg shadow border-l-4 border-l-purple-400 hover:shadow-lg transition-all cursor-pointer" onclick="showLocation('ymca')">
                                 <h5 class="font-bold text-purple-600 border-b border-purple-200 pb-1">YMCA Branch</h5>
                                 <p class="text-sm text-gray-600 pt-1">Ground Floor, YMCA Bldg.</p>
                             </div>
@@ -2744,11 +2744,11 @@
                 <div>
                     <h3 class="text-2xl font-bold mb-6">Get in Touch</h3>
                     <div class="space-y-6">
-                        <div class="bg-white p-6 rounded-lg shadow-lg border-2 border-indigo-200 border-l-4 border-l-indigo-400">
+                        <div class="bg-white p-6 rounded-lg shadow-lg border-2 border-indigo-200 border-l-4 border-l-indigo-400 hover:shadow-xl transition-all cursor-pointer" onclick="showLocation('main-office')">
                             <h4 class="font-bold text-lg mb-2 text-indigo-600 border-b-2 border-indigo-300 pb-2">Main Office</h4>
                             <p class="text-gray-700 p-3 border-2 border-gray-200 rounded-lg bg-gray-50">📍 Skyworld Commercial Center<br>Session Road, Baguio City 2600</p>
                         </div>
-                        <div class="bg-white p-6 rounded-lg shadow-lg border-2 border-green-200 border-l-4 border-l-green-400">
+                        <div class="bg-white p-6 rounded-lg shadow-lg border-2 border-green-200 border-l-4 border-l-green-400 hover:shadow-xl transition-all cursor-pointer" onclick="showLocation('santiago')">
                             <h4 class="font-bold text-lg mb-2 text-green-600 border-b-2 border-green-300 pb-2">Santiago Branch</h4>
                             <p class="text-gray-700 p-3 border-2 border-gray-200 rounded-lg bg-gray-50">📍 Level 2 Robinsons Mall, Maharlika Highway<br>Santiago City, Isabela 3311</p>
                             <p class="text-sm text-green-600 mt-2 border-t border-green-200 pt-2">Manager: Corazon A. Balisong</p>
