--- a/index.html
+++ b/index.html
@@ -2529,11 +2529,25 @@
                         </div>
                     </div>
                 </div>
-                <div class="mt-6 bg-white p-6 rounded-lg shadow-lg">
-                    <ul class="text-gray-700 space-y-2">
-                        <li class="flex items-center"><span class="text-indigo-600 mr-2">•</span>GATT Branch Managers</li>
-                        <li class="flex items-center"><span class="text-indigo-600 mr-2">•</span>GATT Travel Consultants and Staffs</li>
-                    </ul>
+                <div class="mt-6 grid md:grid-cols-2 gap-6">
+                    <div class="bg-white p-6 rounded-lg shadow-lg">
+                        <div class="flex items-center mb-4">
+                            <div class="w-16 h-16 bg-blue-500 rounded-full flex items-center justify-center text-white text-2xl font-bold">BM</div>
+                            <div class="ml-4">
+                                <h4 class="text-xl font-bold">GATT Branch Managers</h4>
+                                <p class="text-gray-600">Professional Branch Management Team</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="bg-white p-6 rounded-lg shadow-lg">
+                        <div class="flex items-center mb-4">
+                            <div class="w-16 h-16 bg-teal-500 rounded-full flex items-center justify-center text-white text-2xl font-bold">TC</div>
+                            <div class="ml-4">
+                                <h4 class="text-xl font-bold">GATT Travel Consultants</h4>
+                                <p class="text-gray-600">Travel & Immigration Experts</p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </section>
 
