--- a/index.html
+++ b/index.html
@@ -452,6 +452,40 @@
                 </div>
             </section>
 
+            <!-- Management Team -->
+            <section class="mb-16">
+                <h3 class="text-2xl font-bold mb-6 text-indigo-600">Our Management Team</h3>
+                <div class="grid md:grid-cols-3 gap-8">
+                    <div class="bg-white p-6 rounded-lg shadow-lg">
+                        <div class="flex items-center mb-4">
+                            <div class="w-16 h-16 bg-indigo-500 rounded-full flex items-center justify-center text-white text-2xl font-bold">JB</div>
+                            <div class="ml-4">
+                                <h4 class="text-xl font-bold">Ms. Judith Balisong Balabag</h4>
+                                <p class="text-gray-600">CEO & General Manager</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="bg-white p-6 rounded-lg shadow-lg">
+                        <div class="flex items-center mb-4">
+                            <div class="w-16 h-16 bg-green-500 rounded-full flex items-center justify-center text-white text-2xl font-bold">CB</div>
+                            <div class="ml-4">
+                                <h4 class="text-xl font-bold">Corazon A. Balisong</h4>
+                                <p class="text-gray-600">Santiago Branch Manager</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="bg-white p-6 rounded-lg shadow-lg">
+                        <div class="flex items-center mb-4">
+                            <div class="w-16 h-16 bg-purple-500 rounded-full flex items-center justify-center text-white text-2xl font-bold">BA</div>
+                            <div class="ml-4">
+                                <h4 class="text-xl font-bold">BALISONG & ASSOCIATES</h4>
+                                <p class="text-gray-600">LAW OFFICE - Legal Adviser</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
             <!-- Professional Team -->
             <section class="mb-16">
                 <h3 class="text-2xl font-bold mb-6 text-indigo-600">Our Professional Team</h3>
@@ -2541,7 +2575,7 @@
             <!-- Management Team -->
             <section class="mb-16">
                 <h3 class="text-3xl font-bold text-center mb-8 text-indigo-600">Our Management Team</h3>
-                <div class="grid md:grid-cols-3 gap-8">
+                <div class="grid md:grid-cols-2 gap-8">
                     <div class="bg-white p-6 rounded-lg shadow-lg">
                         <div class="flex items-center mb-4">
                             <div class="w-16 h-16 bg-indigo-500 rounded-full flex items-center justify-center text-white text-2xl font-bold">JB</div>
@@ -2560,6 +2594,8 @@
                             </div>
                         </div>
                     </div>
+                </div>
+                <div class="mt-6 grid md:grid-cols-3 gap-6">
                     <div class="bg-white p-6 rounded-lg shadow-lg">
                         <div class="flex items-center mb-4">
                             <div class="w-16 h-16 bg-purple-500 rounded-full flex items-center justify-center text-white text-2xl font-bold">BA</div>
@@ -2569,8 +2605,6 @@
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="mt-6 grid md:grid-cols-2 gap-6">
                     <div class="bg-white p-6 rounded-lg shadow-lg">
                         <div class="flex items-center mb-4">
                             <div class="w-16 h-16 bg-blue-500 rounded-full flex items-center justify-center text-white text-2xl font-bold">BM</div>
