--- a/index.html
+++ b/index.html
@@ -2818,19 +2818,19 @@
                     <form id="contactForm" class="bg-white p-6 rounded-lg shadow-lg space-y-4 border-2 border-indigo-200 border-l-4 border-l-indigo-400">
                         <div>
                             <label class="block text-sm font-medium text-gray-700 mb-2 border-b border-gray-200 pb-1">Name</label>
-                            <input type="text" class="w-full p-3 border-2 border-gray-300 rounded-lg" required>
+                            <input type="text" name="name" class="w-full p-3 border-2 border-gray-300 rounded-lg" required>
                         </div>
                         <div>
                             <label class="block text-sm font-medium text-gray-700 mb-2 border-b border-gray-200 pb-1">Email</label>
-                            <input type="email" class="w-full p-3 border-2 border-gray-300 rounded-lg" required>
+                            <input type="email" name="email" class="w-full p-3 border-2 border-gray-300 rounded-lg" required>
                         </div>
                         <div>
                             <label class="block text-sm font-medium text-gray-700 mb-2 border-b border-gray-200 pb-1">Subject</label>
-                            <input type="text" id="subject" class="w-full p-3 border-2 border-gray-300 rounded-lg" required>
+                            <input type="text" name="subject" id="subject" class="w-full p-3 border-2 border-gray-300 rounded-lg" required>
                         </div>
                         <div>
                             <label class="block text-sm font-medium text-gray-700 mb-2 border-b border-gray-200 pb-1">Message</label>
-                            <textarea rows="4" class="w-full p-3 border-2 border-gray-300 rounded-lg" required></textarea>
+                            <textarea name="message" rows="4" class="w-full p-3 border-2 border-gray-300 rounded-lg" required></textarea>
                         </div>
                         <button type="submit" class="w-full bg-indigo-600 text-white py-3 rounded-lg hover:bg-indigo-700 border-2 border-indigo-700">Send Message</button>
                     </form>
@@ -2891,6 +2891,15 @@
     <!-- OpenStreetMap and Leaflet for maps -->
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
+    
+    <!-- EmailJS for contact form -->
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+    <script type="text/javascript">
+        (function() {
+            emailjs.init("YOUR_PUBLIC_KEY"); // You'll need to replace this with your actual EmailJS public key
+        })();
+    </script>
+    
     <script src="assets/script.js"></script>
 <script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'96d5e185a7fd8241',t:'MTc1NDg5NTg4OC4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
 </html>
