Refactor package carousel functionality: enhance card rendering with error handling, improve responsive design calculations, and add debug logging for better state management.

--- a/index.html
+++ b/index.html
@@ -722,7 +722,7 @@
                     </button>
                     
                     <!-- Package Cards Container -->
-                    <div class="overflow-hidden mx-12">
+                    <div class="overflow-hidden mx-12 px-4">
                         <div id="packageCarousel" class="flex space-x-5 transition-transform duration-300 ease-in-out">
                             <!-- Package cards will be dynamically inserted here -->
                         </div>
