Update hero section styling: change background to a gradient, adjust text colors for better contrast, and enhance overall visual appeal.

--- a/index.html
+++ b/index.html
@@ -80,10 +80,10 @@
     <!-- Home Tab -->
     <div id="home" class="tab-content active">
         <!-- Hero Section -->
-        <section class="hero-bg text-white py-20">
+        <section class="bg-gradient-to-br from-blue-600 via-blue-700 to-indigo-800 text-white py-20">
             <div class="max-w-7xl mx-auto px-4 text-center">
-                <h2 class="text-5xl font-bold mb-6 text-indigo-800">Discover Your Next Adventure</h2>
-                <p class="text-xl mb-8 text-indigo-700">26 years of creating unforgettable travel experiences</p>
+                <h2 class="text-5xl font-bold mb-6 text-white">Discover Your Next Adventure</h2>
+                <p class="text-xl mb-8 text-blue-100">26 years of creating unforgettable travel experiences</p>
                 <button onclick="showTab('services')" class="bg-white text-blue-600 px-8 py-4 rounded-full text-lg font-semibold hover:bg-blue-50 transition-all shadow-lg hover:shadow-xl">
                     Explore Our Services
                 </button>
