Reorganize contact form and social media section in index.html: move 'Connect with us' section below the message form for improved layout and user experience.

--- a/index.html
+++ b/index.html
@@ -1205,58 +1205,59 @@
                             </div>
                         </div>
                         
-                        <!-- Connect with us Section -->
-                        <div class="bg-white p-6 rounded-lg shadow-lg border-2 border-purple-200 border-l-4 border-l-purple-400">
-                            <h4 class="font-bold text-lg mb-4 text-purple-600 border-b-2 border-purple-300 pb-2">Connect with us</h4>
-                            <div class="grid grid-cols-2 gap-4">
-                                <a href="#" class="social-link flex items-center justify-center p-4 bg-blue-600 text-white rounded-lg hover:bg-blue-700 transition-all shadow-md hover:shadow-lg border-2 border-blue-700 transform hover:scale-105">
-                                    <div class="flex items-center space-x-3">
-                                        <div class="w-8 h-8 bg-white rounded flex items-center justify-center">
-                                            <span class="text-blue-600 font-bold text-lg">f</span>
-                                        </div>
-                                        <span class="font-semibold">Facebook</span>
-                                    </div>
-                                </a>
-                                <a href="#" class="social-link flex items-center justify-center p-4 bg-red-600 text-white rounded-lg hover:bg-red-700 transition-all shadow-md hover:shadow-lg border-2 border-red-700 transform hover:scale-105">
-                                    <div class="flex items-center space-x-3">
-                                        <div class="w-8 h-8 bg-white rounded flex items-center justify-center">
-                                            <svg class="w-5 h-5 text-red-600" fill="currentColor" viewBox="0 0 20 20">
-                                                <path d="M2.003 5.884L10 9.882l7.997-3.998A2 2 0 0016 4H4a2 2 0 00-1.997 1.884z"/>
-                                                <path d="M18 8.118l-8 4-8-4V14a2 2 0 002 2h12a2 2 0 002-2V8.118z"/>
-                                            </svg>
-                                        </div>
-                                        <span class="font-semibold">Gmail</span>
-                                    </div>
-                                </a>
-                            </div>
-                            <div class="mt-3 p-2 bg-purple-50 rounded border border-purple-200">
-                                <p class="text-xs text-purple-600 text-center">💡 Click to connect with us on social media</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div>
-                    <h3 class="text-2xl font-bold mb-6">Send us a Message</h3>
-                    <form id="contactForm" class="bg-white p-6 rounded-lg shadow-lg space-y-4 border-2 border-indigo-200 border-l-4 border-l-indigo-400">
-                        <div>
-                            <label class="block text-sm font-medium text-gray-700 mb-2 border-b border-gray-200 pb-1">Name</label>
-                            <input type="text" name="name" class="w-full p-3 border-2 border-gray-300 rounded-lg" required>
-                        </div>
-                        <div>
-                            <label class="block text-sm font-medium text-gray-700 mb-2 border-b border-gray-200 pb-1">Email</label>
-                            <input type="email" name="email" class="w-full p-3 border-2 border-gray-300 rounded-lg" required>
-                        </div>
-                        <div>
-                            <label class="block text-sm font-medium text-gray-700 mb-2 border-b border-gray-200 pb-1">Subject</label>
-                            <input type="text" name="subject" id="subject" class="w-full p-3 border-2 border-gray-300 rounded-lg" required>
-                        </div>
-                        <div>
-                            <label class="block text-sm font-medium text-gray-700 mb-2 border-b border-gray-200 pb-1">Message</label>
-                            <textarea name="message" rows="4" class="w-full p-3 border-2 border-gray-300 rounded-lg" required></textarea>
-                        </div>
-                        <button type="submit" class="w-full bg-indigo-600 text-white py-3 rounded-lg hover:bg-indigo-700 border-2 border-indigo-700">Send Message</button>
-                    </form>
-                </div>
+                                             </div>
+                 </div>
+                 <div>
+                     <h3 class="text-2xl font-bold mb-6">Send us a Message</h3>
+                     <form id="contactForm" class="bg-white p-6 rounded-lg shadow-lg space-y-4 border-2 border-indigo-200 border-l-4 border-l-indigo-400">
+                         <div>
+                             <label class="block text-sm font-medium text-gray-700 mb-2 border-b border-gray-200 pb-1">Name</label>
+                             <input type="text" name="name" class="w-full p-3 border-2 border-gray-300 rounded-lg" required>
+                         </div>
+                         <div>
+                             <label class="block text-sm font-medium text-gray-700 mb-2 border-b border-gray-200 pb-1">Email</label>
+                             <input type="email" name="email" class="w-full p-3 border-2 border-gray-300 rounded-lg" required>
+                         </div>
+                         <div>
+                             <label class="block text-sm font-medium text-gray-700 mb-2 border-b border-gray-200 pb-1">Subject</label>
+                             <input type="text" name="subject" id="subject" class="w-full p-3 border-2 border-gray-300 rounded-lg" required>
+                         </div>
+                         <div>
+                             <label class="block text-sm font-medium text-gray-700 mb-2 border-b border-gray-200 pb-1">Message</label>
+                             <textarea name="message" rows="4" class="w-full p-3 border-2 border-gray-300 rounded-lg" required></textarea>
+                         </div>
+                         <button type="submit" class="w-full bg-indigo-600 text-white py-3 rounded-lg hover:bg-indigo-700 border-2 border-indigo-700">Send Message</button>
+                     </form>
+                     
+                     <!-- Connect with us Section -->
+                     <div class="bg-white p-6 rounded-lg shadow-lg border-2 border-purple-200 border-l-4 border-l-purple-400 mt-6">
+                         <h4 class="font-bold text-lg mb-4 text-purple-600 border-b-2 border-purple-300 pb-2">Connect with us</h4>
+                         <div class="grid grid-cols-2 gap-4">
+                             <a href="#" class="social-link flex items-center justify-center p-4 bg-blue-600 text-white rounded-lg hover:bg-blue-700 transition-all shadow-md hover:shadow-lg border-2 border-blue-700 transform hover:scale-105">
+                                 <div class="flex items-center space-x-3">
+                                     <div class="w-8 h-8 bg-white rounded flex items-center justify-center">
+                                         <span class="text-blue-600 font-bold text-lg">f</span>
+                                     </div>
+                                     <span class="font-semibold">Facebook</span>
+                                 </div>
+                             </a>
+                             <a href="#" class="social-link flex items-center justify-center p-4 bg-red-600 text-white rounded-lg hover:bg-red-700 transition-all shadow-md hover:shadow-lg border-2 border-red-700 transform hover:scale-105">
+                                 <div class="flex items-center space-x-3">
+                                     <div class="w-8 h-8 bg-white rounded flex items-center justify-center">
+                                         <svg class="w-5 h-5 text-red-600" fill="currentColor" viewBox="0 0 20 20">
+                                             <path d="M2.003 5.884L10 9.882l7.997-3.998A2 2 0 0016 4H4a2 2 0 00-1.997 1.884z"/>
+                                             <path d="M18 8.118l-8 4-8-4V14a2 2 0 002 2h12a2 2 0 002-2V8.118z"/>
+                                         </svg>
+                                     </div>
+                                     <span class="font-semibold">Gmail</span>
+                                 </div>
+                             </a>
+                         </div>
+                         <div class="mt-3 p-2 bg-purple-50 rounded border border-purple-200">
+                             <p class="text-xs text-purple-600 text-center">💡 Click to connect with us on social media</p>
+                         </div>
+                     </div>
+                 </div>
             </div>
         </div>
     </div>
