Refactor management and professional team sections in index.html: update layout to use a two-column grid for management team and a four-column grid for professional team, enhance styling for team member cards, and improve text hierarchy for better readability.

--- a/index.html
+++ b/index.html
@@ -445,74 +445,49 @@
             <!-- Management Team -->
             <section class="mb-16">
                 <h3 class="text-2xl font-bold mb-6 text-indigo-600">Our Management Team</h3>
-                <div class="grid md:grid-cols-3 gap-8">
-                    <div class="bg-white p-6 rounded-lg shadow-lg">
-                        <div class="flex items-center mb-4">
-                            <div class="w-16 h-16 bg-indigo-500 rounded-full flex items-center justify-center text-white text-2xl font-bold">JB</div>
-                            <div class="ml-4">
-                                <h4 class="text-xl font-bold">Ms. Judith Balisong Balabag</h4>
-                                <p class="text-gray-600">CEO & General Manager</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="bg-white p-6 rounded-lg shadow-lg">
-                        <div class="flex items-center mb-4">
-                            <div class="w-16 h-16 bg-green-500 rounded-full flex items-center justify-center text-white text-2xl font-bold">CB</div>
-                            <div class="ml-4">
-                                <h4 class="text-xl font-bold">Corazon A. Balisong</h4>
-                                <p class="text-gray-600">Santiago Branch Manager</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="bg-white p-6 rounded-lg shadow-lg">
-                        <div class="flex items-center mb-4">
-                            <div class="w-16 h-16 bg-purple-500 rounded-full flex items-center justify-center text-white text-2xl font-bold">BA</div>
-                            <div class="ml-4">
-                                <h4 class="text-xl font-bold">BALISONG & ASSOCIATES</h4>
-                                <p class="text-gray-600">LAW OFFICE - Legal Adviser</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </section>
-
-            <!-- Professional Team -->
-            <section class="mb-16">
-                <h3 class="text-2xl font-bold mb-6 text-indigo-600">Our Professional Team</h3>
                 <div class="grid md:grid-cols-2 lg:grid-cols-4 gap-6">
                     <div class="bg-white p-6 rounded-lg shadow-lg">
-                        <div class="flex items-center mb-4">
-                            <div class="w-12 h-12 bg-blue-500 rounded-full flex items-center justify-center text-white text-lg font-bold">BM</div>
-                            <div class="ml-3">
-                                <h5 class="font-bold">Branch Managers</h5>
-                                <p class="text-sm text-gray-600">GATT Branch Managers</p>
+                        <div class="flex items-start mb-4">
+                            <div class="w-16 h-16 bg-purple-500 rounded-full flex items-center justify-center text-white text-2xl font-bold flex-shrink-0">BA</div>
+                            <div class="ml-4 flex-1">
+                                <h4 class="text-lg font-bold leading-tight">BALISONG & ASSOCIATES</h4>
+                                <p class="text-gray-600 text-sm">LAW OFFICE - Legal Adviser</p>
                             </div>
                         </div>
                     </div>
                     <div class="bg-white p-6 rounded-lg shadow-lg">
-                        <div class="flex items-center mb-4">
-                            <div class="w-12 h-12 bg-teal-500 rounded-full flex items-center justify-center text-white text-lg font-bold">TC</div>
-                            <div class="ml-3">
-                                <h5 class="font-bold">Travel Consultants</h5>
-                                <p class="text-sm text-gray-600">GATT Travel Consultants</p>
+                        <div class="flex items-start mb-4">
+                            <div class="w-16 h-16 bg-blue-500 rounded-full flex items-center justify-center text-white text-2xl font-bold flex-shrink-0">BM</div>
+                            <div class="ml-4 flex-1">
+                                <h4 class="text-lg font-bold leading-tight">Branch Managers</h4>
+                                <p class="text-gray-600 text-sm">GATT Branch Managers</p>
                             </div>
                         </div>
                     </div>
                     <div class="bg-white p-6 rounded-lg shadow-lg">
-                        <div class="flex items-center mb-4">
-                            <div class="w-12 h-12 bg-orange-500 rounded-full flex items-center justify-center text-white text-lg font-bold">VS</div>
-                            <div class="ml-3">
-                                <h5 class="font-bold">Visa Specialists</h5>
-                                <p class="text-sm text-gray-600">Visa & Immigration Experts</p>
+                        <div class="flex items-start mb-4">
+                            <div class="w-16 h-16 bg-teal-500 rounded-full flex items-center justify-center text-white text-2xl font-bold flex-shrink-0">TC</div>
+                            <div class="ml-4 flex-1">
+                                <h4 class="text-lg font-bold leading-tight">Travel Consultants</h4>
+                                <p class="text-gray-600 text-sm">GATT Travel Consultants</p>
                             </div>
                         </div>
                     </div>
                     <div class="bg-white p-6 rounded-lg shadow-lg">
-                        <div class="flex items-center mb-4">
-                            <div class="w-12 h-12 bg-pink-500 rounded-full flex items-center justify-center text-white text-lg font-bold">CS</div>
-                            <div class="ml-3">
-                                <h5 class="font-bold">Customer Service</h5>
-                                <p class="text-sm text-gray-600">Support & Assistance Team</p>
+                        <div class="flex items-start mb-4">
+                            <div class="w-16 h-16 bg-orange-500 rounded-full flex items-center justify-center text-white text-2xl font-bold flex-shrink-0">VS</div>
+                            <div class="ml-4 flex-1">
+                                <h4 class="text-lg font-bold leading-tight">Visa Specialists</h4>
+                                <p class="text-gray-600 text-sm">Visa & Immigration Experts</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="bg-white p-6 rounded-lg shadow-lg">
+                        <div class="flex items-start mb-4">
+                            <div class="w-16 h-16 bg-pink-500 rounded-full flex items-center justify-center text-white text-2xl font-bold flex-shrink-0">CS</div>
+                            <div class="ml-4 flex-1">
+                                <h4 class="text-lg font-bold leading-tight">Customer Service</h4>
+                                <p class="text-gray-600 text-sm">Support & Assistance Team</p>
                             </div>
                         </div>
                     </div>
