--- a/index.html
+++ b/index.html
@@ -501,7 +501,7 @@
                                          <div class="bg-white p-6 rounded-lg shadow-lg">
                          <h4 class="font-bold text-lg mb-2">Main Office</h4>
                          <p class="text-gray-700">Skyworld Commercial Center<br>Session Road, Baguio City 2600</p>
-                         <button onclick="openGoogleMaps('Skyworld Commercial Center, Session Road, Baguio City 2600')" class="text-indigo-600 hover:text-indigo-800 font-medium hover:underline">Get Directions →</button>
+                         <button onclick="openGoogleMaps('GRACIOUS ANGELI\' Travel & Tours, Skyworld Commercial Center, Session Rd, Baguio, 2600 Benguet')" class="text-indigo-600 hover:text-indigo-800 font-medium hover:underline">Get Directions →</button>
                      </div>
                                          <div class="bg-white p-6 rounded-lg shadow-lg">
                          <h4 class="font-bold text-lg mb-2">SM City Branch</h4>
@@ -516,7 +516,7 @@
                                                                                    <div class="bg-white p-6 rounded-lg shadow-lg border-2 border-indigo-200">
                           <h4 class="font-bold text-lg mb-2 text-indigo-600">Santiago Branch</h4>
                           <p class="text-gray-700">Level 2 Robinsons Mall, Maharlika Highway<br>Santiago City, Isabela 3311</p>
-                          <button onclick="openGoogleMaps('Level 2 Robinsons Mall, Maharlika Highway, Santiago City, Isabela 3311')" class="text-indigo-600 hover:text-indigo-800 font-medium hover:underline">Get Directions →</button>
+                          <button onclick="openGoogleMaps('Gracious Angeli\' Travel Tours, Level 2, Robinsons Place, Santiago 1, Santiago, Isabela')" class="text-indigo-600 hover:text-indigo-800 font-medium hover:underline">Get Directions →</button>
                       </div>
                 </div>
             </section>
@@ -1018,7 +1018,7 @@
                          <h4 class="font-bold text-lg mb-2 text-indigo-600">Main Office</h4>
                          <h5 class="font-semibold mb-2">Gracious Angeli Travel And Tours</h5>
                          <p class="text-gray-700 mb-3">📍 Skyworld Commercial Center<br>Session Road, Baguio City 2600</p>
-                         <button onclick="openGoogleMaps('Skyworld Commercial Center, Session Road, Baguio City 2600')" class="text-indigo-600 hover:text-indigo-800 font-medium hover:underline">Get Directions →</button>
+                         <button onclick="openGoogleMaps('GRACIOUS ANGELI\' Travel & Tours, Skyworld Commercial Center, Session Rd, Baguio, 2600 Benguet')" class="text-indigo-600 hover:text-indigo-800 font-medium hover:underline">Get Directions →</button>
                      </div>
                     
                                          <div class="bg-white p-6 rounded-lg shadow-lg">
@@ -1039,7 +1039,7 @@
                          <h4 class="font-bold text-lg mb-2 text-indigo-600">Santiago City Branch</h4>
                          <h5 class="font-semibold mb-2">Gracious Angeli Travel And Tours</h5>
                          <p class="text-gray-700 mb-3">📍 Level 2 Robinsons Mall, Maharlika Highway<br>Santiago City, Isabela</p>
-                         <button onclick="openGoogleMaps('Level 2 Robinsons Mall, Maharlika Highway, Santiago City, Isabela')" class="text-indigo-600 hover:text-indigo-800 font-medium hover:underline">Get Directions →</button>
+                         <button onclick="openGoogleMaps('Gracious Angeli Travel Tours, Level 2, Robinsons Place, Santiago 1, Santiago, Isabela')" class="text-indigo-600 hover:text-indigo-800 font-medium hover:underline">Get Directions →</button>
                      </div>
                 </div>
             </section>
