Update office location details in index.html: replace location text with custom pin icons for Main Office, SM City Branch, YMCA Branch, and Santiago Branch, enhancing visual consistency and user navigation experience.

--- a/index.html
+++ b/index.html
@@ -1158,7 +1158,7 @@
                         <!-- Main Office -->
                         <div class="bg-white p-6 rounded-lg shadow-lg border-2 border-indigo-200 border-l-4 border-l-indigo-400 hover:shadow-xl transition-all cursor-pointer" onclick="showLocation('main-office')">
                             <h4 class="font-bold text-lg mb-2 text-indigo-600 border-b-2 border-indigo-300 pb-2">Main Office</h4>
-                            <p class="text-gray-700 p-3 border-2 border-gray-200 rounded-lg bg-gray-50">📍 Skyworld Commercial Center<br>Session Road, Baguio City 2600</p>
+                                                         <p class="text-gray-700 p-3 border-2 border-gray-200 rounded-lg bg-gray-50"><img src="assets/GATT WEBSITE UPDATES/ICONS/pin.png" alt="Location" class="inline-block w-5 h-5 mr-2"> Skyworld Commercial Center<br>Session Road, Baguio City 2600</p>
                             <div class="mt-3 space-y-1 text-sm">
                                 <p class="text-gray-600 border-b border-gray-200 pb-1">📞 +63-9175061996</p>
                                 <p class="text-gray-600">🕒 9:00 AM - 6:00 PM (Monday to Saturday)</p>
@@ -1168,7 +1168,7 @@
                         <!-- SM City Branch -->
                         <div class="bg-white p-6 rounded-lg shadow-lg border-2 border-blue-200 border-l-4 border-l-blue-400 hover:shadow-xl transition-all cursor-pointer" onclick="showLocation('sm-city')">
                             <h4 class="font-bold text-lg mb-2 text-blue-600 border-b-2 border-blue-300 pb-2">SM City Branch</h4>
-                            <p class="text-gray-700 p-3 border-2 border-gray-200 rounded-lg bg-gray-50">📍 Upper Basement (Opposite DFA)<br>SM City, Baguio City 2600</p>
+                                                         <p class="text-gray-700 p-3 border-2 border-gray-200 rounded-lg bg-gray-50"><img src="assets/GATT WEBSITE UPDATES/ICONS/pin.png" alt="Location" class="inline-block w-5 h-5 mr-2"> Upper Basement (Opposite DFA)<br>SM City, Baguio City 2600</p>
                             <div class="mt-3 space-y-1 text-sm">
                                 <p class="text-blue-600 border-b border-blue-200 pb-1">📞 +63-9171583664</p>
                                 <p class="text-gray-600">🕒 10:00 AM - 10:00 PM (Monday to Sunday)</p>
@@ -1178,7 +1178,7 @@
                         <!-- YMCA Branch -->
                         <div class="bg-white p-6 rounded-lg shadow-lg border-2 border-purple-200 border-l-4 border-l-purple-400 hover:shadow-xl transition-all cursor-pointer" onclick="showLocation('ymca')">
                             <h4 class="font-bold text-lg mb-2 text-purple-600 border-b-2 border-purple-300 pb-2">YMCA Branch</h4>
-                            <p class="text-gray-700 p-3 border-2 border-gray-200 rounded-lg bg-gray-50">📍 Ground Floor, YMCA Bldg.<br>Upper Session Road, Baguio City 2600</p>
+                                                         <p class="text-gray-700 p-3 border-2 border-gray-200 rounded-lg bg-gray-50"><img src="assets/GATT WEBSITE UPDATES/ICONS/pin.png" alt="Location" class="inline-block w-5 h-5 mr-2"> Ground Floor, YMCA Bldg.<br>Upper Session Road, Baguio City 2600</p>
                             <div class="mt-3 space-y-1 text-sm">
                                 <p class="text-purple-600 border-b border-purple-200 pb-1">📞 +63-9171060994</p>
                                 <p class="text-gray-600">🕒 9:00 AM - 5:00 PM (Monday to Saturday)</p>
@@ -1188,7 +1188,7 @@
                         <!-- Santiago Branch -->
                         <div class="bg-white p-6 rounded-lg shadow-lg border-2 border-green-200 border-l-4 border-l-green-400 hover:shadow-xl transition-all cursor-pointer" onclick="showLocation('santiago')">
                             <h4 class="font-bold text-lg mb-2 text-green-600 border-b-2 border-green-300 pb-2">Santiago Branch</h4>
-                            <p class="text-gray-700 p-3 border-2 border-gray-200 rounded-lg bg-gray-50">📍 Level 2 Robinsons Mall, Maharlika Highway<br>Santiago City, Isabela 3311</p>
+                                                         <p class="text-gray-700 p-3 border-2 border-gray-200 rounded-lg bg-gray-50"><img src="assets/GATT WEBSITE UPDATES/ICONS/pin.png" alt="Location" class="inline-block w-5 h-5 mr-2"> Level 2 Robinsons Mall, Maharlika Highway<br>Santiago City, Isabela 3311</p>
                             <div class="mt-3 space-y-1 text-sm">
                                 <p class="text-gray-600 border-b border-gray-200 pb-1">📞 +63-9958424115</p>
                                 <p class="text-gray-600">🕒 10:00 AM - 9:00 PM (Monday to Sunday)</p>
