--- a/index.html
+++ b/index.html
@@ -1232,25 +1232,25 @@
                      <div class="bg-white p-6 rounded-lg shadow-lg border-2 border-purple-200 border-l-4 border-l-purple-400 mt-6">
                          <h4 class="font-bold text-lg mb-4 text-purple-600 border-b-2 border-purple-300 pb-2">Connect with us</h4>
                          <div class="grid grid-cols-2 gap-4">
-                             <a href="#" class="social-link flex items-center justify-center p-4 bg-blue-600 text-white rounded-lg hover:bg-blue-700 transition-all shadow-md hover:shadow-lg border-2 border-blue-700 transform hover:scale-105">
-                                 <div class="flex items-center space-x-3">
-                                     <div class="w-8 h-8 bg-white rounded flex items-center justify-center">
-                                         <span class="text-blue-600 font-bold text-lg">f</span>
-                                     </div>
-                                     <span class="font-semibold">Facebook</span>
-                                 </div>
-                             </a>
-                             <a href="#" class="social-link flex items-center justify-center p-4 bg-red-600 text-white rounded-lg hover:bg-red-700 transition-all shadow-md hover:shadow-lg border-2 border-red-700 transform hover:scale-105">
-                                 <div class="flex items-center space-x-3">
-                                     <div class="w-8 h-8 bg-white rounded flex items-center justify-center">
-                                         <svg class="w-5 h-5 text-red-600" fill="currentColor" viewBox="0 0 20 20">
-                                             <path d="M2.003 5.884L10 9.882l7.997-3.998A2 2 0 0016 4H4a2 2 0 00-1.997 1.884z"/>
-                                             <path d="M18 8.118l-8 4-8-4V14a2 2 0 002 2h12a2 2 0 002-2V8.118z"/>
-                                         </svg>
-                                     </div>
-                                     <span class="font-semibold">Gmail</span>
-                                 </div>
-                             </a>
+                            <a href="https://www.facebook.com/share/16nvCamFwg/" target="_blank" class="social-link flex items-center justify-center p-4 bg-blue-600 text-white rounded-lg hover:bg-blue-700 transition-all shadow-md hover:shadow-lg border-2 border-blue-700 transform hover:scale-105">
+                                <div class="flex items-center space-x-3">
+                                    <div class="w-8 h-8 bg-white rounded flex items-center justify-center">
+                                        <span class="text-blue-600 font-bold text-lg">f</span>
+                                    </div>
+                                    <span class="font-semibold">Facebook</span>
+                                </div>
+                            </a>
+                             <a href="mailto:graciousangeli.santiago@gmail.com" class="social-link flex items-center justify-center p-4 bg-red-600 text-white rounded-lg hover:bg-red-700 transition-all shadow-md hover:shadow-lg border-2 border-red-700 transform hover:scale-105">
+                                <div class="flex items-center space-x-3">
+                                    <div class="w-8 h-8 bg-white rounded flex items-center justify-center">
+                                        <svg class="w-5 h-5 text-red-600" fill="currentColor" viewBox="0 0 20 20">
+                                            <path d="M2.003 5.884L10 9.882l7.997-3.998A2 2 0 0016 4H4a2 2 0 00-1.997 1.884z"/>
+                                            <path d="M18 8.118l-8 4-8-4V14a2 2 0 002 2h12a2 2 0 002-2V8.118z"/>
+                                        </svg>
+                                    </div>
+                                    <span class="font-semibold">Gmail</span>
+                                </div>
+                            </a>
                          </div>
                          <div class="mt-3 p-2 bg-purple-50 rounded border border-purple-200">
                              <p class="text-xs text-purple-600 text-center">💡 Click to connect with us on social media</p>
