--- a/index.html
+++ b/index.html
@@ -1343,8 +1343,8 @@
 
                     <!-- Email Field -->
                     <div class="bg-gray-50 p-4 rounded-lg border-l-4 border-l-teal-400">
-                        <label class="block text-lg font-semibold text-gray-800 mb-3">7. Your Email Address (Optional)</label>
-                        <input type="email" name="user_email" placeholder="Enter your email address..." class="w-full p-3 border-2 border-gray-200 rounded-lg focus:border-teal-400 focus:outline-none transition-all">
+                        <label class="block text-lg font-semibold text-gray-800 mb-3">7. Your Email Address <span class="text-red-500">*</span></label>
+                        <input type="email" name="user_email" placeholder="Enter your email address..." required class="w-full p-3 border-2 border-gray-200 rounded-lg focus:border-teal-400 focus:outline-none transition-all">
                         <p class="text-sm text-gray-500 mt-2">We'll use this to follow up on your feedback if needed</p>
                     </div>
 
